# fluxapay

./: IMPLEMENTATION_COMPLETE.md  ORACLE_IMPLEMENTATION_SUMMARY.md  TODO.md  docker-compose.ci.yml  docker-compose.staging.yml  pull_request.md
.github/workflows/: backend-ci.yml  canary-deploy.yml  frontend-ci.yml  integration-tests.yml  sdk-release-python-go.yml
fluxapay_backend/: .env.example  Dockerfile.ci  PII_SAFE_LOGGING.md  README.md  package-lock.json  package.json
fluxapay_backend/docs/: DASHBOARD_EXPORT_FEATURE.md  FluxaPay_API.postman_collection.json  FluxaPay_Local.postman_environment.json  GETTING_STARTED.md  HORIZON_STREAMING_DECISION.md  HORIZON_STREAMING_IMPLEMENTATION.md  ORACLE_SERVICE_README.md  SEED_SCRIPT.md
fluxapay_backend/prisma/: schema.prisma  seed.ts
fluxapay_backend/scripts/: check-route-coverage.ts  rotate-master-seed.ts
fluxapay_backend/src/: app.ts  index.ts  worker.ts
fluxapay_backend/src/__tests__/: gracefulShutdown.test.ts
fluxapay_frontend/: next.config.ts  package-lock.json  playwright.smoke.config.ts  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
fluxapay_frontend/docs/: HORIZON_STREAMING_SPIKE.md  ORACLE_SERVICE_IMPLEMENTATION.md
fluxapay_frontend/e2e/: critical-path.spec.ts  login.spec.ts  smoke.spec.ts
fluxapay_frontend/src/: middleware.ts
fluxapay_go_sdk/: README.md  go.mod
fluxapay_go_sdk/fluxapay/: client.go  client_test.go
fluxapay_python_sdk/: README.md  pyproject.toml
fluxapay_python_sdk/fluxapay/: __init__.py
fluxapay_python_sdk/tests/: test_sdk.py
fluxapay_sdk/: README.md  package.json
(+170 files in other folders)
