[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "fluxapay"
version = "0.1.0"
description = "FluxaPay Python SDK — accept USDC payments on Stellar"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["fluxapay", "payments", "stellar", "usdc", "crypto"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[project.urls]
Homepage = "https://github.com/MetroLogic/fluxapay"
Repository = "https://github.com/MetroLogic/fluxapay"

[tool.setuptools.packages.find]
where = ["."]
include = ["fluxapay*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
